CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_cmt_hist__x/fields/cde_type_cmt__c.field-meta.xml
<CustomField>
    <fullName>cde_type_cmt__c</fullName>
    <description>cde_type_cmt</description>
    <externalDeveloperName>cde_type_cmt</externalDeveloperName>
    <label>Comment type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>