CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_cmt_hist__x/fields/dte_create__c.field-meta.xml
<CustomField>
    <fullName>dte_create__c</fullName>
    <description>dte_create</description>
    <externalDeveloperName>dte_create</externalDeveloperName>
    <label>Created date</label>
    <type>DateTime</type>
</CustomField>