CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_cmt_hist__x/fields/idn_cmt_adjmt__c.field-meta.xml
<CustomField>
    <fullName>idn_cmt_adjmt__c</fullName>
    <description>idn_cmt_adjmt</description>
    <externalDeveloperName>idn_cmt_adjmt</externalDeveloperName>
    <label>Adjustment comment Id</label>
    <length>50</length>
    <referenceTargetField>T_ADJMT_CMT__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_ADJMT_CMT__c</referenceTo>
    <relationshipLabel>Adjustment Comment Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_adjmt_cmt_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>