CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_cmt_hist__x/fields/idn_create_user__c.field-meta.xml
<CustomField>
    <fullName>idn_create_user__c</fullName>
    <description>idn_create_user</description>
    <externalDeveloperName>idn_create_user</externalDeveloperName>
    <label>User id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>