CHATS_SIT/force-app/main/default/objects/sfrosit_t_adjmt_cmt_hist__x/fields/txt_subj__c.field-meta.xml
<CustomField>
    <fullName>txt_subj__c</fullName>
    <description>txt_subj</description>
    <externalDeveloperName>txt_subj</externalDeveloperName>
    <label>Subject</label>
    <length>30</length>
    <type>Text</type>
</CustomField>